<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_otherAppo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/others_specify" />

    <EditText
        android:id="@+id/et_number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address_optional"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/et_number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no" />


</LinearLayout>